  - DBIx::Custom::insert, select,update,delete method's id option is DEPRECATED!
  - DBIx::Custom::insert, select,update,delete method's primary_key option is DEPRECATED!
  - DBIx::Custom::Model AUTOLOAD feature is DEPRECATED!
  - DBIx::Custom::Model::helper method is DEPRECATED!
  - DBIx::Custom::Model::update_or_insert method is DEPRECATED!
  - DBIx::Custom::Model::count is DEPRECATED!

0.38 2017-3-18
  ---------------------------------------------------
  NOTE: This release remove many DEPRECATED features. 
  ---------------------------------------------------
  - remove DEPRECATED default_filter method(DBIx::Custom::Result).
  - remove DEPRECATED default_fetch_filter(DBIx::Custom).
  - remove DEPRECATED default_bind_filter(DBIx::Custom).
  - remove DEPRECATED DBIx::Custom::Query.
  - remove DEPRECATED DBIx::Custom::QueryBuilder.
  - remove DEPRECATED execute(DBIx::Custom) method's query option
  - remove DEPRECATED execute method receiving query object
  - remove DEPRECATED cache_method(DBIx::Custom).
  - remove DEPRECATED query_builder(DBIx::Custom).
  - remove DEPRECATED tag_parse(DBIx::Custom)
  - remove DBIX_CUSTOM_TAG_PARSE environment variable
  - remove DEPRECATED register_tag_processor(DBIx::Custom)
  - remove DEPRECATED register_tag(DBIx::Custom)
  - remove DEPRECATED tag parsing functionality
  - remove DEPRECATED prepend method(DBIx::Custom::Order) array reference receiving
  - remove DEPRECATED remote_end_filter(DIBx::Custom::Result)
  - remote DEPRECATED remove_filter(DIBx::Custom::Result)
  - remove DEPRECATED filter_on(DBIx::Custom::Result)
  - remove DEPRECATED filter_off(DBIx::Custom::Result)
  - remove DEPRECATED end_filter(DBIx::Custom::Result)
  - remove DEPRECATED filter_check(DBIx::Custom::Result)
  - remove DEPRECATED column(DBIx::Custom::Result)
  - remove DEPRECATED fetch_first(DBIx::Custom::Result)
  - remove DEPRECATED fetch_hash_first(DBIx::Custom::Result)
  - remove DEPRECATED execute(DBIx::Custom::Model)