@@ -14,7 +14,9 @@
   - DBIx::Custom::Model::helper method is DEPRECATED!
   - DBIx::Custom::Model::update_or_insert method is DEPRECATED!
   - DBIx::Custom::Model::count is DEPRECATED!
-
+  - DBIx::Custom::insert method which have array argument(For example, [{foo => 1, bar => 2}, {foo => 3, bar => 4}])
+    become slow.
+  
 0.38 2017-3-18
   ---------------------------------------------------
   NOTE: This release remove many DEPRECATED features. 
